Don not crash when moving multiple vector shapes

BUG:409872